@@ -17,6 +17,8 @@ Version 1.8.5
        fails to escape text. (Stefan)
 - BUG: Issue #611: log dialog does not fetch all
        revisions specified in merge dialog. (Stefan)
+- BUG: Issue #614: TSVNCache crash when
+       removing cached data. (Stefan)
 
 Version 1.8.4
 - BUG: Issue 584: Revert from log dialog bottom pane
